--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -26,7 +26,7 @@
         <input type="email" name="myEmail" placeholder="Email"
           ng-model="user.myEmail" ng-required="true">
         <p class="error"
-          ng-show="myform.email.$invalid && myform.email.$touched">
+          ng-show="myform.myEmail.$invalid && myform.myEmail.$touched">
           Must be a valid email</p>
 
         <button type="submit" class="btn"
@@ -42,6 +42,3 @@
 
   </body>
 </html>
-
-
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
