--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -2,43 +2,15 @@
 <html ng-app="myApp">
 <head>
   <link rel="stylesheet" href="css/style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.4/angular.min.js"></script>
+  <script src="js/lib/angular/angular.min.js"></script>
+  <script src="js/lib/angular/angular-route.min.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/controllers/registration.js"></script>
 </head>
 <body>
-
-  <div ng-controller="RegisterController">
-    
-    <section ng-hide="success">
-      <form name="myform"
-        ng-submit="register()"
-        novalidate>
-
-        <h1>Register</h1>
-        <p>To access site features</p>
-
-        <input type="myname" name="myname" placeholder="Name"
-          ng-model="user.myname" ng-required="true">
-        <p class="error"
-          ng-show="myform.myname.$invalid && myform.myname.$touched">
-          First Name is required</p>
-
-        <input type="email" name="myEmail" placeholder="Email"
-          ng-model="user.myEmail" ng-required="true">
-        <p class="error"
-          ng-show="myform.myEmail.$invalid && myform.myEmail.$touched">
-          Must be a valid email</p>
-
-        <button type="submit" class="btn"
-          ng-disabled="myform.$invalid">Register</button>
-      </form>
-    </section>
-
-    <section ng-show="success">
-      <h1>Thanks</h1>
-      <p>Thanks for filling out our form {{ user.myname }}...You've been successfully registered.</p>
-    </section>
-  </div> <!-- RegisterController -->
-
-  </body>
+  <section class="branding">
+    <h1 class="container">RadReg</h1>
+  </section>
+  <div class="container" ng-view></div> 
+</body>
 </html>
