--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -4,6 +4,11 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/lib/angular/angular.min.js"></script>
   <script src="js/lib/angular/angular-route.min.js"></script>
+
+  <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script>
+  <script src="https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js"></script>
+
+
   <script src="js/app.js"></script>
   <script src="js/controllers/registration.js"></script>
 </head>
